# TE3003B-ROS2

./: .gitignore  .gitmodules
Week 1/Challenge/Puzzlebot_Gazebo_Simulator/install/: local_setup.sh  setup.sh
Week 1/Challenge/Puzzlebot_Gazebo_Simulator/log/: latest_build
Week 1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_gazebo/: setup.py
Week 1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_world/: package.xml  setup.py
Week 1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_world/worlds/: track.sdf
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/: gathered_poses.csv  playground.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/: playground.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot/: package.xml  run_bridge.sh  run_serial.sh  setup.cfg  setup.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_control/: package.xml  setup.cfg  setup.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_gazebo/: package.xml  setup.cfg  setup.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_gazebo/config_files/: puzzlebot_controller_effort.yaml  puzzlebot_controller_velocity.yaml
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_gazebo/urdf/: macros.xacro  parameters.xacro  puzzlebot.gazebo  puzzlebot.urdf  puzzlebot.xacro  puzzlebot_b.urdf
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_planning/: calibrate_camera.cpp  compile_calibration.sh  package.xml  pycalib.py  setup.cfg  setup.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_sim/: package.xml  setup.cfg  setup.py  simulation_config.rviz
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_sim/launch/: puzzlebot_rviz.launch.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_sim/puzzlebot_sim/: data_gathering.py  localisation.py  pose_calculation.py  puzzlebot_tf.py
Week-1/Challenge/Puzzlebot_Gazebo_Simulator/src/puzzlebot_world/: package.xml  (+1 more)
(+39 files in other folders)
