<?xml version="1.0"?>
<package format="2">
  <name>puzzlebot_gazebo</name>
  <version>0.0.1</version>
  <description>The puzzlebot_gazebo package</description>

  <maintainer email="alfredd.gco@gmail.com">Alfredo Garcia</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
