<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_sim</name>
  <version>0.0.0</version>
  <description>Simulation launches and configurations for puzzlebot</description>
  <maintainer email="alfredd.gco@gmail.com">Alfredo Garcia</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_tools</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

